--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
   "devDependencies": {
     "@craco/craco": "^5.6.2",
     "@semantic-ui-react/craco-less": "^1.2.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
-    "cpy-cli": "^3.0.0",
-    "craco-less": "^1.15.0",
-    "create-react-app": "^3.3.0",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.12.0",
-    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "3.3.0",
     "reactcss": "^1.2.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -35,5 +34,19 @@
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
-  "dependencies": {}
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
