--- a/src/semantic-ui/theme.config
+++ b/src/semantic-ui/theme.config
@@ -77,17 +77,14 @@
             Folders
 *******************************/
 
-/* Path to theme packages */
 @themesFolder : 'themes';
-
-/* Path to site override folder */
-@siteFolder  : 'site';
-
+@siteFolder  : '../../src/semantic-ui/site';
 
 /*******************************
          Import Theme
 *******************************/
 
-@import (multiple) "theme.less";
+@import (multiple) "~semantic-ui-less/theme.less";
+@fontPath : '../../../themes/@{theme}/assets/fonts';
 
 /* End Config */
