Updated header and main menu

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "craco start",
+    "start": "PORT=8080 craco start",
     "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
+    "test": "craco test"
   },
   "author": "",
   "license": "ISC",
