--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "dependencies": {
     "google-distance-matrix": "^1.1.1",
-    "google-maps-react": "^2.0.2",
+    "google-map-react": "^1.1.5",
     "react-scroll-up-button": "^1.6.4"
   }
 }
