--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Supply chain management system - frontend",
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=8080 craco start",
     "build": "craco build",
     "test": "craco test"
   },
-  "author": "",
+  "author": "Polya Angelova",
   "license": "ISC",
   "devDependencies": {
     "@craco/craco": "^5.6.2",
